--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -331,6 +331,7 @@ textarea:focus-visible{
 .px-2{ padding-left:.5rem; padding-right:.5rem; }
 .px-3{ padding-left:.75rem; padding-right:.75rem; }
 .px-4{ padding-left:1rem; padding-right:1rem; }
+.px-xl{ padding-left:2rem; padding-right:2rem; }
 .py-0\.5{ padding-top:.125rem; padding-bottom:.125rem; }
 .py-1{ padding-top:.25rem; padding-bottom:.25rem; }
 .py-2{ padding-top:.5rem; padding-bottom:.5rem; }
