--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -253,7 +253,6 @@ textarea:focus-visible{
 
 /* Sticky/fixed bottom action panel */
 .bottom-panel {
-  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
@@ -271,7 +270,7 @@ textarea:focus-visible{
 .bottom-panel > * {
   max-width: 960px;
   margin: 0 auto;
-  padding: 12px 16px;
+  padding: 6px 8px;
 }
 /* Perfect circular color inputs across browsers */
 .color-circle {
@@ -312,9 +311,10 @@ textarea:focus-visible{
 .flex{ display:flex; }
 .flex-col{ flex-direction:column; }
 .flex-row{ flex-direction: row;}
-.flex-rrvs{ flex-direction: row-reverse;}
+.items-row{ display: row;}
 .items-center{ align-items:center; }
 .items-start{ align-items:flex-start; }
+.items-end{ align-items:flex-end; }
 .justify-between{ justify-content:space-between; }
 .grid{ display:grid; }
 .grid-cols-1{ grid-template-columns: repeat(1, minmax(0,1fr)); }
